--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "bundle/syntastic"]
 	path = bundle/syntastic
 	url = ../../scrooloose/syntastic
+[submodule "bundle/multiple-cursors"]
+	path = bundle/multiple-cursors
+	url = ../../terryma/vim-multiple-cursors
