--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "bundle/rainbow_parentheses.vim"]
 	path = bundle/rainbow_parentheses.vim
 	url = ../../kien/rainbow_parentheses.vim
+[submodule "bundle/vim-easymotion"]
+	path = bundle/vim-easymotion
+	url = ../../easymotion/vim-easymotion
