--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "bundle/open-browser.vim"]
 	path = bundle/open-browser.vim
 	url = ../../tyru/open-browser.vim
+[submodule "bundle/ag.vim"]
+	path = bundle/ag.vim
+	url = ../../rking/ag.vim
