--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,9 @@
 [submodule "bundle/gitignore"]
 	path = bundle/gitignore
 	url = https://github.com/vim-scripts/gitignore
+[submodule "bundle/YCM-Generator"]
+	path = bundle/YCM-Generator
+	url = https://github.com/rdnetto/YCM-Generator
+[submodule "bundle/bundle/auto-pairs"]
+	path = bundle/bundle/auto-pairs
+	url = https://github.com/jiangmiao/auto-pairs
